fix: footer not showing

--- a/frontend/src/assets/landing-styles.scss
+++ b/frontend/src/assets/landing-styles.scss
@@ -24,7 +24,6 @@ a {
 
 .landing-page {
   min-height: 100vh;
-  height: 100%;
   color: white;
 
   h1 {
